style.css
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");

* {
  box-sizing: content-box;
  margin: 0;
  padding: 0;
  font-family: "Inter", sans-serif;
  overflow: hidden;
}

body {
  position: relative;
  background-color: #fffdfa;
  height: 100vh;
  width: 100vw;
}

.container {
  position: absolute;
  height: 80vh;
  width: 80vw;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

/*Styling for the header and navigation elements within the header tag*/

header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  height: fit-content;
  margin-bottom: 2rem;
}

ul {
  display: inline-flex;
  justify-content: space-evenly;
  list-style: none;
}

li {
  margin-left: 1.5rem;
}

a {
  color: #c5c6ce;
  text-decoration: none;
}

/*Styling for the main content of this website*/

/*Styling for the first row of the grid*/

main {
  display: grid;
  grid-template-columns: repeat(11, 1fr);
  grid-template-rows: repeat(3, 1fr);
  gap: 20px;
  height: 100%;
  width: 100%;
}
/*Bug in this area*/
.main-img {
  height: 100%;
  width: 100%;
  grid-column: 1 / span 8;
  grid-row: 1 / span 1;
}

.main-img > img {
  object-fit: contain;
}

.new-section {
  grid-column: 9 / span 3;
  grid-row: 1 / span 2;
}

.new-content-container {
  background-color: #00001a;
  height: 100%;
  width: 100%;
}

.new-content-container > h1 {
  font-size: 2rem;
  color: #e9ab53;
  padding: 1.5rem;
}

.new-content-container > h4 {
  color: #fff;
  margin: 1.5rem;
}

.new-content-container > p {
  color: #5d5f79;
  margin: 1.5rem;
}

hr {
  opacity: 0.2;
  margin: 1.5rem;
}

/*Styling for second row (excludes the part of the new container that spans 2 rows*/

.main-article {
  display: flex;
  justify-content: space-between;
  grid-column: 1 / span 8;
}

.main-article-heading > h1 {
  font-size: 4rem;
  font-weight: 800;
}

.main-article-heading {
  width: 45%;
}

.main-article-info {
  width: 38%;
  margin-top: 0.6rem;
}

.red-rectangle {
  position: relative;
  top: 35%;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #f15e50;
  height: 20%;
  width: 50%;
}

.red-rectangle > h5 {
  font-weight: 400;
  letter-spacing: 0.3rem;
   color: #fff;
}

.main-article-info > p {
  color: #5d5f79;
}

